# intel-xpu-backend-for-triton

./: .gitignore  CMakeLists.txt  test_tma_block_ptr.py
.github/actions/install-wheels/: action.yml
.github/workflows/: auto-update-translator-cid.yml  build-conda.yml  build-test-reusable.yml  build-test.yml  conda-build-test.yml  e2e-reusable.yml  no-basekit-build-test.yml  triton-benchmarks.yml  triton_xpu_backend_ci.yml  triton_xpu_backend_e2e_ci.yml
GenISAIntrinsics/include/: GenIntrinsicEnum.h  GenIntrinsics.h  IntrinsicGenISA.gen
benchmark/: 01-vector-add.py  02-fused-softmax.py
benchmark/scripts/: micro_kernel_extractor.py  perf_data_summarize.py  run_inductor_kernel_bench.py
benchmarks/triton_kernels_benchmark/: benchmark_driver.py  flash_attention_fwd_benchmark.py  fused_softmax.py  gemm_benchmark.py
benchmarks/xetla_kernel/: python_main.cpp
cmake/: FindSPIRVToLLVMTranslator.cmake  FindSPIRV_Tools.cmake  FindVCIntrinsics.cmake
include/triton/Analysis/: IntelUtility.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  IntelUtility.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/IntelGPUToSPIRV/: CMakeLists.txt  IntelGPUToSPIRVPass.cpp
lib/Conversion/TritonGPUToLLVM/: CMakeLists.txt  ConvertLayoutOpToLLVM.cpp  DotOpToLLVM.cpp  ElementwiseOpToLLVM.cpp  GenIntrinsicHelper.cpp  GenIntrinsicHelper.h  LoadStoreOpToLLVM.cpp  TypeConverter.cpp  Utility.cpp  Utility.h  ViewOpToLLVM.cpp
lib/Conversion/TritonGPUToSPIRV/: CMakeLists.txt  ConvertLayoutOpToSPIRV.cpp  DotOpToSPIRV.cpp  ESIMDHelper.cpp  ElementwiseOpToSPIRV.cpp  LoadStoreOpToSPIRV.cpp  TensorPtrOpsToSPIRV.cpp  TensorPtrOpsToSPIRV.h  TritonGPUToSPIRVBase.h  TritonGPUToSPIRVPass.cpp  TypeConverter.cpp  Utility.cpp  Utility.h  VCIntrinsicHelper.cpp  ViewOpToSPIRV.cpp  vc-intrinsics-tag.conf
lib/Conversion/TritonGPUToSPIRV/ConvertLayoutOpToSPIRV/: SharedToDotOperandFMA.cpp  SharedToDotOperandXMX.cpp  XMXToShared.cpp
lib/Conversion/TritonGPUToSPIRV/DotOpToSPIRV/: FMA.cpp  XMX.cpp
lib/GenISAIntrinsics/include/: GenIntrinsicEnum.h  GenIntrinsics.h
lib/Tools/: LinearLayout.cpp
python/: CMakeLists.txt  __init__.py  setup.py
python/csrc/: intel_xpu_backend_for_triton.cc  main.cc
python/lib/: libprint_utils.bc  libprint_utils.spv
python/src/: ir.cc  llvm.cc
python/test/regression/: test_functional_regressions.py
python/triton/: testing.py
python/triton/compiler/: compiler.py
python/tutorials/: 06-fused-attention.py  08-experimental-block-pointer.py  09-experimental-block-pointer.py  09-experimental-tma-matrix-multiplication.py  09-persistent-matmul.py  10-experimental-tma-store-matrix-multiplication.py
python/utils/: sycl.cpp
scripts/: check-update-translator-cid.sh  compile-triton.sh  run_no_basekit.sh  run_tutorial.py  test-triton.sh
test/TritonGEN/: gpu-to-tritongen.mlir  tritongen-invalid.mlir  tritongen-to-llvm.mlir  tritongen.mlir
test/TritonIntelGPU/: intel-2d-load-lowering.mlir  intel-2d-load.mlir
torch_reproducers/: CMakeLists.txt  compare_outputs.py  install_deps.sh  torch_reproducer.cpp
(+60 files in other folders)
